--- a/docroot/sites/clecotools/modules/custom/cleco_vuejs/cleco_vuejs.services.yml
+++ b/docroot/sites/clecotools/modules/custom/cleco_vuejs/cleco_vuejs.services.yml
@@ -38,3 +38,4 @@ services:
     class: Drupal\cleco_vuejs\Services\VueDataFormatter
     arguments:
       - '@entity_type.manager'
+      - '@path_alias.manager'
