Apex-000: Change the source file name for GB content

--- a/config/clecotools/default/migrate_plus.migration.cleco_product_media_gb.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_media_gb.yml
@@ -1,7 +1,9 @@
-uuid: dd3560dc-b872-4297-a56f-79b5de62c20b
+uuid: 4843cb92-9f87-415d-b0cf-f4403f4437ae
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: 3221XeLRfW00-Pdpc83dEasqfiJP3QPiF8DUPSdXfjc
 id: cleco_product_media_gb
 class: null
 field_plugin_method: null
@@ -15,7 +17,7 @@ source:
   plugin: url
   data_fetcher_plugin: file
   data_parser_plugin: simple_xml
-  urls: 'public://import/pim_data/pim_export_with_schema_gb.xml'
+  urls: 'public://import/pim_data/pim_export_with_schema.xml'
   namespaces:
     stibo: 'http://www.stibosystems.com/step'
   item_selector: //Assets/Asset
