--- a/config/clecotools/default/migrate_plus.migration.cleco_products_gb.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_products_gb.yml
@@ -1,7 +1,9 @@
-uuid: 3468561a-7cf8-4aa3-894e-c169af7364e0
+uuid: 0cc0e733-bd67-4706-9940-04dcc12cb40b
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: 85bvZivaR8SPPXBnvnrXW4SYZimg-JVp-Jfmb8kRRX8
 id: cleco_products_gb
 class: null
 field_plugin_method: null
@@ -17,7 +19,7 @@ source:
   plugin: url
   data_fetcher_plugin: file
   data_parser_plugin: simple_xml
-  urls: 'public://import/pim_data/pim_export_with_schema_gb.xml'
+  urls: 'public://import/pim_data/pim_export_with_schema.xml'
   namespaces: 'http://www.stibosystems.com/step'
   item_selector: '//Product[@UserTypeID="SKU Group"]'
   fields:
