feature/APEX-481-CLECO-Update-Enhanced-Products-content-type-new update the product and enhanced product content type suggested by TL.

--- a/config/clecotools/default/core.entity_form_display.media.product_downloads.default.yml
+++ b/config/clecotools/default/core.entity_form_display.media.product_downloads.default.yml
@@ -12,18 +12,11 @@ dependencies:
   module:
     - file
     - media_library
-    - path
 id: media.product_downloads.default
 targetEntityType: media
 bundle: product_downloads
 mode: default
 content:
-  created:
-    type: datetime_timestamp
-    weight: 3
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_language:
     type: options_select
     weight: 8
@@ -68,12 +61,6 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  path:
-    type: path
-    weight: 4
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   status:
     type: boolean_checkbox
     weight: 5
@@ -81,15 +68,8 @@ content:
     settings:
       display_label: true
     third_party_settings: {  }
-  uid:
-    type: entity_reference_autocomplete
-    weight: 2
-    region: content
-    settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
 hidden:
+  created: true
   langcode: true
+  path: true
+  uid: true
