--- a/config/clecotools/default/core.entity_view_display.node.enhanced_product.default.yml
+++ b/config/clecotools/default/core.entity_view_display.node.enhanced_product.default.yml
@@ -25,106 +25,34 @@ dependencies:
     - field.field.node.enhanced_product.field_web_display_sort_order
     - node.type.enhanced_product
   module:
-    - text
     - user
 id: node.enhanced_product.default
 targetEntityType: node
 bundle: enhanced_product
 mode: default
-content:
-  body:
-    type: text_default
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    weight: 5
-    region: content
-  field_downloads:
-    type: entity_reference_label
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    weight: 2
-    region: content
-  field_footnotes:
-    type: text_default
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    weight: 3
-    region: content
-  field_long_description:
-    type: string
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    weight: 1
-    region: content
-  field_media:
-    type: entity_reference_label
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    weight: 4
-    region: content
-  field_product_classifications:
-    type: entity_reference_label
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    weight: 6
-    region: content
-  field_product_images:
-    type: entity_reference_label
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    weight: 7
-    region: content
-  field_product_models:
-    type: entity_reference_label
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    weight: 8
-    region: content
-  field_upc:
-    type: string
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    weight: 10
-    region: content
-  field_web_display_sort_order:
-    type: string
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    weight: 11
-    region: content
-  links:
-    settings: {  }
-    third_party_settings: {  }
-    weight: 0
-    region: content
+content: {  }
 hidden:
+  body: true
   field_360_image: true
+  field_downloads: true
   field_feature_hotspots: true
   field_features_copy: true
+  field_footnotes: true
+  field_long_description: true
+  field_media: true
+  field_product_classifications: true
   field_product_features: true
+  field_product_images: true
   field_product_line: true
+  field_product_models: true
   field_related_products: true
   field_sku: true
   field_slug: true
+  field_upc: true
   field_video_background: true
   field_video_popup: true
+  field_web_display_sort_order: true
   langcode: true
+  links: true
   search_api_excerpt: true
+  uuid: true
