--- a/config/clecotools/default/core.entity_view_display.node.product.default.yml
+++ b/config/clecotools/default/core.entity_view_display.node.product.default.yml
@@ -19,132 +19,28 @@ dependencies:
     - field.field.node.product.field_web_display_sort_order
     - node.type.product
   module:
-    - text
     - user
 id: node.product.default
 targetEntityType: node
 bundle: product
 mode: default
-content:
-  body:
-    type: text_default
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    weight: 101
-    region: content
-  field_downloads:
-    type: entity_reference_entity_view
-    label: above
-    settings:
-      view_mode: default
-      link: false
-    third_party_settings: {  }
-    weight: 112
-    region: content
-  field_footnotes:
-    type: text_default
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    weight: 106
-    region: content
-  field_long_description:
-    type: string
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    weight: 102
-    region: content
-  field_media:
-    type: entity_reference_entity_view
-    label: above
-    settings:
-      view_mode: default
-      link: false
-    third_party_settings: {  }
-    weight: 107
-    region: content
-  field_product_classifications:
-    type: entity_reference_label
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    weight: 110
-    region: content
-  field_product_features_cp:
-    type: string
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    weight: 105
-    region: content
-  field_product_images:
-    type: entity_reference_entity_view
-    label: above
-    settings:
-      view_mode: default
-      link: false
-    third_party_settings: {  }
-    weight: 108
-    region: content
-  field_product_models:
-    type: entity_reference_label
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    weight: 113
-    region: content
-  field_related_products_ref:
-    type: entity_reference_label
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    weight: 109
-    region: content
-  field_sku_group:
-    type: string
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    weight: 104
-    region: content
-  field_slug:
-    type: string
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    weight: 114
-    region: content
-  field_upc:
-    type: string
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    weight: 103
-    region: content
-  field_web_display_sort_order:
-    type: string
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    weight: 115
-    region: content
-  links:
-    settings: {  }
-    third_party_settings: {  }
-    weight: 100
-    region: content
+content: {  }
 hidden:
+  body: true
+  field_downloads: true
+  field_footnotes: true
+  field_long_description: true
+  field_media: true
+  field_product_classifications: true
+  field_product_features_cp: true
+  field_product_images: true
+  field_product_models: true
+  field_related_products_ref: true
+  field_sku_group: true
+  field_slug: true
+  field_upc: true
+  field_web_display_sort_order: true
   langcode: true
+  links: true
   search_api_excerpt: true
   uuid: true
