--- a/config/clecotools/default/field.field.media.product_downloads.field_language.yml
+++ b/config/clecotools/default/field.field.media.product_downloads.field_language.yml
@@ -13,7 +13,7 @@ entity_type: media
 bundle: product_downloads
 label: Language
 description: ''
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
