--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_products.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_products.yml
@@ -74,7 +74,7 @@ process:
   type:
     plugin: default_value
     default_value: product
-  title: remote_sku
+  title: remote_name
   sticky: constants/bool_0
   promote: constants/bool_1
   uid: constants/uid_root
@@ -89,9 +89,7 @@ process:
   
   field_sku: remote_sku
 
-  field_sku_group:
-    plugin: apex_get_id_attribute
-    source: remote_sku_group
+  field_sku_group: remote_sku
   
   field_long_description:
     plugin: apex_get_attribute_value
