--- a/config/clecotools/default/search_api.index.acquia_search_index.yml
+++ b/config/clecotools/default/search_api.index.acquia_search_index.yml
@@ -9,7 +9,7 @@ dependencies:
     - field.storage.media.field_product_category
     - field.storage.media.field_type
     - field.storage.node.field_360_image
-    - field.storage.paragraph.field_360_product_image
+    - field.storage.paragraph.field_360_loading_image
     - field.storage.node.body
     - field.storage.node.field_long_description
     - field.storage.node.field_downloads
@@ -171,26 +171,26 @@ field_settings:
     property_path: drive_type
     type: string
   enhanced_product_image:
-    label: '360° Product Image » Paragraph » Product 360° Image » File » Filename'
+    label: '360° Product Image » Paragraph » Product Loading Image » File » Filename'
     datasource_id: 'entity:node'
-    property_path: 'field_360_image:entity:field_360_product_image:entity:filename'
+    property_path: 'field_360_image:entity:field_360_loading_image:entity:filename'
     type: string
     dependencies:
       config:
         - field.storage.node.field_360_image
-        - field.storage.paragraph.field_360_product_image
+        - field.storage.paragraph.field_360_loading_image
       module:
         - file
         - paragraphs
   enhanced_product_image_url:
-    label: '360° Product Image » Paragraph » Product 360° Image » File » URI » Root-relative file URL'
+    label: '360° Product Image » Paragraph » Product Loading Image » File » URI » Root-relative file URL'
     datasource_id: 'entity:node'
-    property_path: 'field_360_image:entity:field_360_product_image:entity:uri:url'
+    property_path: 'field_360_image:entity:field_360_loading_image:entity:uri:url'
     type: string
     dependencies:
       config:
         - field.storage.node.field_360_image
-        - field.storage.paragraph.field_360_product_image
+        - field.storage.paragraph.field_360_loading_image
       module:
         - file
         - paragraphs
@@ -250,7 +250,7 @@ field_settings:
     label: 'Coupon heading'
     datasource_id: 'entity:node'
     property_path: field_long_description
-    type: string
+    type: text
     dependencies:
       config:
         - field.storage.node.field_long_description
