feature/APEX-481-CLECO-Update-Enhanced-Products-content-type-new update the Manage display of enhanced product content type and download product manage display.

--- a/config/clecotools/default/core.entity_form_display.node.enhanced_product.default.yml
+++ b/config/clecotools/default/core.entity_form_display.node.enhanced_product.default.yml
@@ -36,25 +36,15 @@ targetEntityType: node
 bundle: enhanced_product
 mode: default
 content:
-  body:
-    type: text_textarea_with_summary
-    weight: 24
-    region: content
-    settings:
-      rows: 9
-      summary_rows: 3
-      placeholder: ''
-      show_summary: false
-    third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 3
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
   field_360_image:
     type: entity_reference_paragraphs
-    weight: 13
+    weight: 14
     region: content
     settings:
       title: '360° Product Image'
@@ -79,7 +69,7 @@ content:
     third_party_settings: {  }
   field_feature_hotspots:
     type: entity_reference_paragraphs
-    weight: 15
+    weight: 16
     region: content
     settings:
       title: 'Product Hotspot'
@@ -91,7 +81,7 @@ content:
     third_party_settings: {  }
   field_features_copy:
     type: text_textarea
-    weight: 14
+    weight: 15
     region: content
     settings:
       rows: 5
@@ -99,7 +89,7 @@ content:
     third_party_settings: {  }
   field_footnotes:
     type: text_textarea
-    weight: 22
+    weight: 23
     region: content
     settings:
       rows: 5
@@ -107,22 +97,15 @@ content:
     third_party_settings: {  }
   field_long_description:
     type: string_textfield
-    weight: 20
+    weight: 2
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  field_media:
-    type: media_library_widget
-    weight: 23
-    region: content
-    settings:
-      media_types: {  }
-    third_party_settings: {  }
   field_product_classifications:
     type: entity_reference_autocomplete
-    weight: 25
+    weight: 3
     region: content
     settings:
       match_operator: CONTAINS
@@ -132,7 +115,7 @@ content:
     third_party_settings: {  }
   field_product_features:
     type: entity_reference_paragraphs
-    weight: 16
+    weight: 17
     region: content
     settings:
       title: 'Product Feature'
@@ -142,22 +125,9 @@ content:
       form_display_mode: default
       default_paragraph_type: enhanced_product_features
     third_party_settings: {  }
-  field_product_images:
-    type: media_library_widget
-    weight: 26
-    region: content
-    settings:
-      media_types: {  }
-    third_party_settings: {  }
-  field_product_line:
-    type: options_select
-    weight: 2
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_product_models:
     type: entity_reference_autocomplete
-    weight: 27
+    weight: 22
     region: content
     settings:
       match_operator: CONTAINS
@@ -167,7 +137,7 @@ content:
     third_party_settings: {  }
   field_related_products:
     type: string_textarea
-    weight: 8
+    weight: 9
     region: content
     settings:
       rows: 5
@@ -175,7 +145,7 @@ content:
     third_party_settings: {  }
   field_sku:
     type: string_textfield
-    weight: 4
+    weight: 5
     region: content
     settings:
       size: 60
@@ -183,7 +153,7 @@ content:
     third_party_settings: {  }
   field_slug:
     type: string_textfield
-    weight: 6
+    weight: 7
     region: content
     settings:
       size: 60
@@ -191,7 +161,7 @@ content:
     third_party_settings: {  }
   field_upc:
     type: string_textfield
-    weight: 29
+    weight: 24
     region: content
     settings:
       size: 60
@@ -199,14 +169,14 @@ content:
     third_party_settings: {  }
   field_video_background:
     type: media_library_widget
-    weight: 10
+    weight: 11
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   field_video_popup:
     type: string_textfield
-    weight: 12
+    weight: 13
     region: content
     settings:
       size: 60
@@ -214,7 +184,7 @@ content:
     third_party_settings: {  }
   field_web_display_sort_order:
     type: string_textfield
-    weight: 30
+    weight: 25
     region: content
     settings:
       size: 60
@@ -229,33 +199,33 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 18
+    weight: 19
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 9
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 5
+    weight: 6
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 19
+    weight: 20
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 11
+    weight: 12
     region: content
     settings:
       display_label: true
@@ -270,7 +240,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 7
+    weight: 8
     region: content
     settings:
       match_operator: CONTAINS
@@ -279,8 +249,12 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 17
+    weight: 18
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  body: true
+  field_media: true
+  field_product_images: true
+  field_product_line: true
