--- a/docroot/sites/clecotools/modules/custom/cleco_vuejs/cleco_vuejs.routing.yml
+++ b/docroot/sites/clecotools/modules/custom/cleco_vuejs/cleco_vuejs.routing.yml
@@ -41,6 +41,7 @@ step.products.product_single:
   path: /products/product-catalog/{product}
   defaults:
     _controller: '\Drupal\cleco_vuejs\Controller\RouteController::productSingle'
+    _title_callback: '\Drupal\cleco_vuejs\Controller\RouteController::productSingleTitle'
   requirements:
     _permission: 'access content'
 
