APEX-400:Media asset specific type mapping.

--- a/config/clecotools/default/migrate_plus.migration.cleco_product_media_de.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_media_de.yml
@@ -102,6 +102,13 @@ process:
     map_media_config:
       'STP File': controller_stp_file_de
       'IGS File': controller_igs_file_de
+      'DXF File': controller_dxf_file_de
+      ZIP: controller_zip_de
+    map_media_extension:
+      'STP File': png
+      'IGS File': png
+      'DXF File': png
+      ZIP: png
     process_params:
       bundle: product_downloads
       source: bundle
