--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_media.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_media.yml
@@ -92,6 +92,14 @@ process:
     map_media_config:
       STP File: controller_stp_file_en
       IGS File: controller_igs_file_en
+      DXF File: controller_dxf_file_en
+      ZIP: controller_zip_en
+    map_media_extension:
+      STP File: png
+      IGS File: png
+      DXF File: png
+      ZIP: png
+
     process_params:
       bundle: product_downloads
       source: bundle
