--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_media_gb.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_media_gb.yml
@@ -92,6 +92,13 @@ process:
     map_media_config:
       STP File: controller_stp_file_gb
       IGS File: controller_igs_file_gb
+      DXF File: controller_dxf_file_gb
+      ZIP: controller_zip_gb
+    map_media_extension:
+      STP File: png
+      IGS File: png
+      DXF File: png
+      ZIP: png
     process_params:
       bundle: product_downloads
       source: bundle
