--- a/config/clecotools/default/core.entity_view_display.paragraph.featured_products.default.yml
+++ b/config/clecotools/default/core.entity_view_display.paragraph.featured_products.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.featured_products.field_featured_products_list
     - field.field.paragraph.featured_products.field_title
     - paragraphs.paragraphs_type.featured_products
 id: paragraph.featured_products.default
@@ -10,6 +11,14 @@ targetEntityType: paragraph
 bundle: featured_products
 mode: default
 content:
+  field_featured_products_list:
+    type: entity_reference_label
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    weight: 1
+    region: content
   field_title:
     type: string
     label: hidden
