--- a/config/clecotools/default/core.entity_form_display.media.product_downloads.default.yml
+++ b/config/clecotools/default/core.entity_form_display.media.product_downloads.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.media.product_downloads.field_downloads_asset_id
     - field.field.media.product_downloads.field_language
     - field.field.media.product_downloads.field_listing_image
     - field.field.media.product_downloads.field_media_file
@@ -17,29 +18,37 @@ targetEntityType: media
 bundle: product_downloads
 mode: default
 content:
+  field_downloads_asset_id:
+    type: string_textfield
+    weight: 1
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_language:
     type: options_select
-    weight: 1
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
   field_listing_image:
     type: media_library_widget
-    weight: 4
+    weight: 5
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   field_media_file:
     type: file_generic
-    weight: 5
+    weight: 6
     region: content
     settings:
       progress_indicator: throbber
     third_party_settings: {  }
   field_product_category:
     type: entity_reference_autocomplete
-    weight: 3
+    weight: 4
     region: content
     settings:
       match_operator: CONTAINS
@@ -49,7 +58,7 @@ content:
     third_party_settings: {  }
   field_type:
     type: options_select
-    weight: 2
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -63,7 +72,7 @@ content:
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 6
+    weight: 7
     region: content
     settings:
       display_label: true
