--- a/config/clecotools/default/core.entity_view_display.media.product_downloads.default.yml
+++ b/config/clecotools/default/core.entity_view_display.media.product_downloads.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.media.product_downloads.field_downloads_asset_id
     - field.field.media.product_downloads.field_language
     - field.field.media.product_downloads.field_listing_image
     - field.field.media.product_downloads.field_media_file
@@ -17,6 +18,14 @@ targetEntityType: media
 bundle: product_downloads
 mode: default
 content:
+  field_downloads_asset_id:
+    type: string
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 6
+    region: content
   field_language:
     type: list_default
     label: above
