--- a/config/clecotools/default/core.entity_form_display.media.image.default.yml
+++ b/config/clecotools/default/core.entity_form_display.media.image.default.yml
@@ -3,12 +3,11 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.media.image.field_downloads_asset_id
     - field.field.media.image.field_media_image
     - image.style.thumbnail
     - media.type.image
-    - workflows.workflow.editorial
   module:
-    - content_moderation
     - image
     - path
 _core:
@@ -20,13 +19,21 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 3
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_downloads_asset_id:
+    type: string_textfield
+    weight: 1
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_media_image:
     type: image_image
-    weight: 1
+    weight: 2
     region: content
     settings:
       progress_indicator: throbber
@@ -34,7 +41,7 @@ content:
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 2
+    weight: 3
     region: content
     settings:
       include_locked: true
@@ -55,13 +62,13 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 4
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 5
+    weight: 6
     region: content
     settings:
       display_label: true
