--- a/config/clecotools/default/core.entity_view_display.media.image.default.yml
+++ b/config/clecotools/default/core.entity_view_display.media.image.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.media.image.field_downloads_asset_id
     - field.field.media.image.field_media_image
     - media.type.image
   module:
@@ -18,6 +19,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: -20
+    region: content
+  field_downloads_asset_id:
+    type: string
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 2
     region: content
   field_media_image:
     type: image
