--- a/config/clecotools/default/core.entity_view_display.media.image.media_library.yml
+++ b/config/clecotools/default/core.entity_view_display.media.image.media_library.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.media_library
+    - field.field.media.image.field_downloads_asset_id
     - field.field.media.image.field_media_image
     - image.style.medium
     - media.type.image
@@ -34,6 +35,7 @@ content:
     region: content
 hidden:
   created: true
+  field_downloads_asset_id: true
   field_media_image: true
   langcode: true
   name: true
