--- a/config/clecotools/default/migrate_plus.migration.cleco_products.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_products.yml
@@ -1,7 +1,9 @@
-uuid: 287a3895-2a3e-423b-8255-7a3b6b47803a
+uuid: c9790e02-71fe-46df-8761-924cbd1b1252
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: OE93r2qwgPxUX8Rig-wLW2TuHVPBVBFDDQNTrY_qxxo
 id: cleco_products
 class: null
 field_plugin_method: null
