--- a/config/clecotools/default/migrate_plus.migration.cleco_product_media_gb.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_media_gb.yml
@@ -1,7 +1,9 @@
-uuid: 4843cb92-9f87-415d-b0cf-f4403f4437ae
+uuid: 2a75d33e-a8d3-4a5b-8b17-f76f3cbfee1e
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: SwUxW7aU_Rwb9kzvNUAPcS1oUH9u6q4irlNRKa7XbtI
 id: cleco_product_media_gb
 class: null
 field_plugin_method: null
@@ -56,10 +58,14 @@ process:
     plugin: cleco_get_media_type
     source: asset_usertype_id
     notification_logfile: 'public://import/pim_data/logs/product_media_notification_gb.txt'
-  name:
+  field_downloads_asset_id:
     plugin: skip_on_empty
     method: row
     source: asset_id
+  name:
+    plugin: skip_on_empty
+    method: row
+    source: asset_name
   status:
     plugin: default_value
     default_value: 1
