--- a/config/clecotools/default/migrate_plus.migration.cleco_products_gb.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_products_gb.yml
@@ -1,7 +1,9 @@
-uuid: 0cc0e733-bd67-4706-9940-04dcc12cb40b
+uuid: 9dfa5513-a4d5-4429-9045-b86fdfaa2157
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: BBdoCcZcTlSOHrf-3jkMfBKjFmqnQ7lQpYD8PAEekIM
 id: cleco_products_gb
 class: null
 field_plugin_method: null
