--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_media.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_media.yml
@@ -41,10 +41,14 @@ process:
     plugin: cleco_get_media_type
     source: asset_usertype_id
     notification_logfile: public://import/pim_data/logs/product_media_notification.txt
-  name:
+  field_downloads_asset_id:
     plugin: skip_on_empty
     method: row
     source: asset_id
+  name:
+    plugin: skip_on_empty
+    method: row
+    source: asset_name
   uid: constants/uid_root
   status:
     plugin: default_value
